syntax = "proto3";
package configpb;

message Config {
    CommonConfig  common  = 1;
    AppConfig     app     = 2;
    NetworkConfig network = 3;
    DataConfig    db      = 4;
    LogConfig     log     = 5;
    ChainConfig   chain   = 6;
    MemPoolConfig pool    = 7;
    WalletConfig  wallet  = 8;
}

message CommonConfig {

}

message AppConfig {
    string profile               = 1;
    string cpu_profile   = 2;
    bool   no_peer_bloom_filters = 3;
}

message ChainConfig {
    bool   disable_checkpoints = 1;
}

message NetworkConfig {
    P2PConfig p2p = 1;
    APIConfig api = 2;
}

message DataConfig {
    string data_dir = 1;
    string db_type  = 2;
}

message LogConfig {
    string log_dir         = 1;
    string debug_level     = 2;
}

message MemPoolConfig {

}

message WalletConfig {
    string wallet_dir = 1;
}

message P2PConfig {
    string          seeds              = 1;
    repeated string add_peer           = 2;
    bool            skip_upnp          = 3;
    uint32          handshake_timeout  = 4;
    uint32          dial_timeout       = 5;
    bool            vault_mode         = 6;
    string          listen_address     = 7;
}

message APIConfig {
    string api_url          = 1;
    string api_port_grpc = 2;
    string api_port_http    = 3;
    bool   api_use_tls      = 4;
    string api_cors_addr = 5;
}
